fixed layout about on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1198,7 +1198,8 @@ footer .logos .fa:hover {
   #about .section-inner .container > .content {
     grid-gap: 6rem;
   }
-  #about .section-inner .container > .content .cards > .card:nth-child(2) .draw {
+  #about .section-inner .container > .content .cards > .card:nth-child(2) .draw,
+  #about .section-inner .container > .content .cards .card:nth-child(4) .draw {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
