--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -164,7 +164,8 @@
         > .content {
           grid-gap: 6rem;
           .cards {
-            > .card:nth-child(2) .draw {
+            > .card:nth-child(2) .draw,
+            .card:nth-child(4) .draw {
               order: -1;
             }
             .card {
